bash-init-container-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /secrets
              name: aws-secretsmanager
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "500Mi"
      volumes:
        - name: aws-secretsmanager
          emptyDir:
            medium: Memory
