haproxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: haproxy
spec:
  type: NodePort
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-deployment
  namespace: haproxy
  labels:
    app: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      volumes:
        - name: haproxy-cfg-volume
          configMap:
            name: haproxy-cfg-v1.0.2
      containers:
        - name: haproxy
          image: haproxy
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: haproxy-cfg-volume
              mountPath: "/usr/local/etc/haproxy"
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: static
  namespace: haproxy
spec:
  type: ExternalName
  externalName: nginx.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
